# platanus-hack-26-mx-team-32

./: .env.example  .gitignore  README.md  demo.ts  docker-compose.yml  package-lock.json  package.json  platanus-hack-project.jsonc  project-description.md  tsconfig.json
agents/: config.py  conftest.py  db.py  graph.py  missing_case_extractor.py  official_source_researcher.py  public_web_acquirer.py  pyproject.toml  requirements.txt  review_recommender.py  run_agent.py  social_intel_extractor.py  state.py  supabase_client.py
agents/migrations/: 001_agent_tables.sql
agents/nodes/: public_web_acquirer.py  review_recommender.py  social_intel_extractor.py
agents/tests/: test_config.py  test_missing_case_extractor.py  test_official_source_researcher.py  test_public_web_acquirer.py  test_review_recommender.py  test_run_agent.py  test_scaffold.py  test_social_intel_extractor.py
app/: .env  .env.example  (+6 more)
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/scripts/: embed_records.py  run_matcher.py  run_verifier.py
backend/src/: config.py  db.py  deps.py  llm.py  main.py
backend/src/agents/: graph.py  supabase_client.py
backend/src/agents/nodes/: missing_case_extractor.py  official_source_researcher.py  public_web_acquirer.py  review_recommender.py  social_intel_extractor.py
backend/src/features/auth/: dependencies.py  router.py  schemas.py
backend/src/features/firecrawl/: router.py  schemas.py  service.py
backend/src/features/matching/: embeddings.py  engine.py  normalize.py  router.py  schemas.py  service.py  tuning.py  verify.py
(+147 files in other folders)
