[project]
name = "hilo-agents"
version = "0.1.0"
description = "Hilo LangGraph agents — acquisition, extraction, review"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=0.2,<0.3",
    "langchain-anthropic>=0.3",
    "anthropic>=0.40",
    "supabase>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
