[project]
name = "hilo-backend"
version = "0.1.0"
description = "Hilo backend — FastAPI, feature-based"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "supabase>=2.9",
    "pydantic-settings>=2.6",
    "psycopg[binary]>=3.2",
    "httpx>=0.27",
]

[tool.uv]
package = false
